# Copyright (C) 2012-2015  CEA/DEN, EDF R&D, OPEN CASCADE
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

# --- options ---

# additional include directories
INCLUDE_DIRECTORIES(
  ${CAS_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/src/FromOCCT/PTKernel
  ${CMAKE_CURRENT_SOURCE_DIR}
)

# additional preprocessor / compiler flags
ADD_DEFINITIONS(
  ${CAS_DEFINITIONS}
  )

# libraries to link to
SET(_link_LIBRARIES
  ${CAS_CDF}
  ${CAS_TKernel} ${CAS_TKLCAF}
  PTKernel
  )

# --- headers ---

SET(GEOM_HEADERS
  Handle_MDataStd_AsciiStringRetrievalDriver.hxx
  Handle_MDataStd_AsciiStringStorageDriver.hxx
  Handle_MDataStd_BooleanArrayRetrievalDriver.hxx
  Handle_MDataStd_BooleanArrayStorageDriver.hxx
  Handle_MDataStd_BooleanListRetrievalDriver.hxx
  Handle_MDataStd_BooleanListStorageDriver.hxx
  Handle_MDataStd_ByteArrayRetrievalDriver_1.hxx
  Handle_MDataStd_ByteArrayRetrievalDriver.hxx
  Handle_MDataStd_ByteArrayStorageDriver.hxx
  Handle_MDataStd_CommentRetrievalDriver.hxx
  Handle_MDataStd_CommentStorageDriver.hxx
  Handle_MDataStd_DirectoryRetrievalDriver.hxx
  Handle_MDataStd_DirectoryStorageDriver.hxx
  Handle_MDataStd_ExpressionRetrievalDriver.hxx
  Handle_MDataStd_ExpressionStorageDriver.hxx
  Handle_MDataStd_ExtStringArrayRetrievalDriver_1.hxx
  Handle_MDataStd_ExtStringArrayRetrievalDriver.hxx
  Handle_MDataStd_ExtStringArrayStorageDriver.hxx
  Handle_MDataStd_ExtStringListRetrievalDriver.hxx
  Handle_MDataStd_ExtStringListStorageDriver.hxx
  Handle_MDataStd_IntegerArrayRetrievalDriver_1.hxx
  Handle_MDataStd_IntegerArrayRetrievalDriver.hxx
  Handle_MDataStd_IntegerArrayStorageDriver.hxx
  Handle_MDataStd_IntegerListRetrievalDriver.hxx
  Handle_MDataStd_IntegerListStorageDriver.hxx
  Handle_MDataStd_IntegerRetrievalDriver.hxx
  Handle_MDataStd_IntegerStorageDriver.hxx
  Handle_MDataStd_IntPackedMapRetrievalDriver_1.hxx
  Handle_MDataStd_IntPackedMapRetrievalDriver.hxx
  Handle_MDataStd_IntPackedMapStorageDriver.hxx
  Handle_MDataStd_NamedDataRetrievalDriver.hxx
  Handle_MDataStd_NamedDataStorageDriver.hxx
  Handle_MDataStd_NameRetrievalDriver.hxx
  Handle_MDataStd_NameStorageDriver.hxx
  Handle_MDataStd_NoteBookRetrievalDriver.hxx
  Handle_MDataStd_NoteBookStorageDriver.hxx
  Handle_MDataStd_RealArrayRetrievalDriver_1.hxx
  Handle_MDataStd_RealArrayRetrievalDriver.hxx
  Handle_MDataStd_RealArrayStorageDriver.hxx
  Handle_MDataStd_RealListRetrievalDriver.hxx
  Handle_MDataStd_RealListStorageDriver.hxx
  Handle_MDataStd_RealRetrievalDriver.hxx
  Handle_MDataStd_RealStorageDriver.hxx
  Handle_MDataStd_ReferenceArrayRetrievalDriver.hxx
  Handle_MDataStd_ReferenceArrayStorageDriver.hxx
  Handle_MDataStd_ReferenceListRetrievalDriver.hxx
  Handle_MDataStd_ReferenceListStorageDriver.hxx
  Handle_MDataStd_RelationRetrievalDriver.hxx
  Handle_MDataStd_RelationStorageDriver.hxx
  Handle_MDataStd_TickRetrievalDriver.hxx
  Handle_MDataStd_TickStorageDriver.hxx
  Handle_MDataStd_TreeNodeRetrievalDriver.hxx
  Handle_MDataStd_TreeNodeStorageDriver.hxx
  Handle_MDataStd_UAttributeRetrievalDriver.hxx
  Handle_MDataStd_UAttributeStorageDriver.hxx
  Handle_MDataStd_VariableRetrievalDriver.hxx
  Handle_MDataStd_VariableStorageDriver.hxx
  Handle_MDF_ARDriverHSequence.hxx
  Handle_MDF_ARDriver.hxx
  Handle_MDF_ARDriverTable.hxx
  Handle_MDF_ASDriverHSequence.hxx
  Handle_MDF_ASDriver.hxx
  Handle_MDF_ASDriverTable.hxx
  Handle_MDF_DataMapNodeOfTypeARDriverMap.hxx
  Handle_MDF_DataMapNodeOfTypeASDriverMap.hxx
  Handle_MDF_DataMapNodeOfTypeDriverListMapOfARDriverTable.hxx
  Handle_MDF_DataMapNodeOfTypeDriverListMapOfASDriverTable.hxx
  Handle_MDF_ListNodeOfDriverListOfARDriverTable.hxx
  Handle_MDF_ListNodeOfDriverListOfASDriverTable.hxx
  Handle_MDF_ReferenceRetrievalDriver.hxx
  Handle_MDF_ReferenceStorageDriver.hxx
  Handle_MDF_RRelocationTable.hxx
  Handle_MDF_SequenceNodeOfARDriverSequence.hxx
  Handle_MDF_SequenceNodeOfASDriverSequence.hxx
  Handle_MDF_SRelocationTable.hxx
  Handle_MDF_TagSourceRetrievalDriver.hxx
  Handle_MDF_TagSourceStorageDriver.hxx
  Handle_MDocStd_DocumentRetrievalDriver.hxx
  Handle_MDocStd_DocumentStorageDriver.hxx
  Handle_MDocStd_XLinkRetrievalDriver.hxx
  Handle_MDocStd_XLinkStorageDriver.hxx
  Handle_MFunction_FunctionRetrievalDriver.hxx
  Handle_MFunction_FunctionStorageDriver.hxx
  Handle_PDataStd_AsciiString.hxx
  Handle_PDataStd_BooleanArray.hxx
  Handle_PDataStd_BooleanList.hxx
  Handle_PDataStd_ByteArray_1.hxx
  Handle_PDataStd_ByteArray.hxx
  Handle_PDataStd_Comment.hxx
  Handle_PDataStd_Directory.hxx
  Handle_PDataStd_Expression.hxx
  Handle_PDataStd_ExtStringArray_1.hxx
  Handle_PDataStd_ExtStringArray.hxx
  Handle_PDataStd_ExtStringList.hxx
  Handle_PDataStd_HArray1OfByte.hxx
  Handle_PDataStd_HArray1OfHArray1OfInteger.hxx
  Handle_PDataStd_HArray1OfHArray1OfReal.hxx
  Handle_PDataStd_HArray1OfHAsciiString.hxx
  Handle_PDataStd_IntegerArray_1.hxx
  Handle_PDataStd_IntegerArray.hxx
  Handle_PDataStd_Integer.hxx
  Handle_PDataStd_IntegerList.hxx
  Handle_PDataStd_IntPackedMap_1.hxx
  Handle_PDataStd_IntPackedMap.hxx
  Handle_PDataStd_NamedData.hxx
  Handle_PDataStd_Name.hxx
  Handle_PDataStd_NoteBook.hxx
  Handle_PDataStd_RealArray_1.hxx
  Handle_PDataStd_RealArray.hxx
  Handle_PDataStd_Real.hxx
  Handle_PDataStd_RealList.hxx
  Handle_PDataStd_ReferenceArray.hxx
  Handle_PDataStd_ReferenceList.hxx
  Handle_PDataStd_Relation.hxx
  Handle_PDataStd_Tick.hxx
  Handle_PDataStd_TreeNode.hxx
  Handle_PDataStd_UAttribute.hxx
  Handle_PDataStd_Variable.hxx
  Handle_PDataStd_VArrayNodeOfFieldOfHArray1OfByte.hxx
  Handle_PDataStd_VArrayNodeOfFieldOfHArray1OfHArray1OfInteger.hxx
  Handle_PDataStd_VArrayNodeOfFieldOfHArray1OfHArray1OfReal.hxx
  Handle_PDataStd_VArrayNodeOfFieldOfHArray1OfHAsciiString.hxx
  Handle_PDF_Attribute.hxx
  Handle_PDF_Data.hxx
  Handle_PDF_HAttributeArray1.hxx
  Handle_PDF_Reference.hxx
  Handle_PDF_TagSource.hxx
  Handle_PDF_VArrayNodeOfFieldOfHAttributeArray1.hxx
  Handle_PDocStd_Document.hxx
  Handle_PDocStd_XLink.hxx
  Handle_PFunction_Function.hxx
  MDataStd_AsciiStringRetrievalDriver.hxx
  MDataStd_AsciiStringRetrievalDriver.ixx
  MDataStd_AsciiStringRetrievalDriver.jxx
  MDataStd_AsciiStringStorageDriver.hxx
  MDataStd_AsciiStringStorageDriver.ixx
  MDataStd_AsciiStringStorageDriver.jxx
  MDataStd_BooleanArrayRetrievalDriver.hxx
  MDataStd_BooleanArrayRetrievalDriver.ixx
  MDataStd_BooleanArrayRetrievalDriver.jxx
  MDataStd_BooleanArrayStorageDriver.hxx
  MDataStd_BooleanArrayStorageDriver.ixx
  MDataStd_BooleanArrayStorageDriver.jxx
  MDataStd_BooleanListRetrievalDriver.hxx
  MDataStd_BooleanListRetrievalDriver.ixx
  MDataStd_BooleanListRetrievalDriver.jxx
  MDataStd_BooleanListStorageDriver.hxx
  MDataStd_BooleanListStorageDriver.ixx
  MDataStd_BooleanListStorageDriver.jxx
  MDataStd_ByteArrayRetrievalDriver_1.hxx
  MDataStd_ByteArrayRetrievalDriver_1.ixx
  MDataStd_ByteArrayRetrievalDriver_1.jxx
  MDataStd_ByteArrayRetrievalDriver.hxx
  MDataStd_ByteArrayRetrievalDriver.ixx
  MDataStd_ByteArrayRetrievalDriver.jxx
  MDataStd_ByteArrayStorageDriver.hxx
  MDataStd_ByteArrayStorageDriver.ixx
  MDataStd_ByteArrayStorageDriver.jxx
  MDataStd_CommentRetrievalDriver.hxx
  MDataStd_CommentRetrievalDriver.ixx
  MDataStd_CommentRetrievalDriver.jxx
  MDataStd_CommentStorageDriver.hxx
  MDataStd_CommentStorageDriver.ixx
  MDataStd_CommentStorageDriver.jxx
  MDataStd_DirectoryRetrievalDriver.hxx
  MDataStd_DirectoryRetrievalDriver.ixx
  MDataStd_DirectoryRetrievalDriver.jxx
  MDataStd_DirectoryStorageDriver.hxx
  MDataStd_DirectoryStorageDriver.ixx
  MDataStd_DirectoryStorageDriver.jxx
  MDataStd_ExpressionRetrievalDriver.hxx
  MDataStd_ExpressionRetrievalDriver.ixx
  MDataStd_ExpressionRetrievalDriver.jxx
  MDataStd_ExpressionStorageDriver.hxx
  MDataStd_ExpressionStorageDriver.ixx
  MDataStd_ExpressionStorageDriver.jxx
  MDataStd_ExtStringArrayRetrievalDriver_1.hxx
  MDataStd_ExtStringArrayRetrievalDriver_1.ixx
  MDataStd_ExtStringArrayRetrievalDriver_1.jxx
  MDataStd_ExtStringArrayRetrievalDriver.hxx
  MDataStd_ExtStringArrayRetrievalDriver.ixx
  MDataStd_ExtStringArrayRetrievalDriver.jxx
  MDataStd_ExtStringArrayStorageDriver.hxx
  MDataStd_ExtStringArrayStorageDriver.ixx
  MDataStd_ExtStringArrayStorageDriver.jxx
  MDataStd_ExtStringListRetrievalDriver.hxx
  MDataStd_ExtStringListRetrievalDriver.ixx
  MDataStd_ExtStringListRetrievalDriver.jxx
  MDataStd_ExtStringListStorageDriver.hxx
  MDataStd_ExtStringListStorageDriver.ixx
  MDataStd_ExtStringListStorageDriver.jxx
  MDataStd.hxx
  MDataStd_IntegerArrayRetrievalDriver_1.hxx
  MDataStd_IntegerArrayRetrievalDriver_1.ixx
  MDataStd_IntegerArrayRetrievalDriver_1.jxx
  MDataStd_IntegerArrayRetrievalDriver.hxx
  MDataStd_IntegerArrayRetrievalDriver.ixx
  MDataStd_IntegerArrayRetrievalDriver.jxx
  MDataStd_IntegerArrayStorageDriver.hxx
  MDataStd_IntegerArrayStorageDriver.ixx
  MDataStd_IntegerArrayStorageDriver.jxx
  MDataStd_IntegerListRetrievalDriver.hxx
  MDataStd_IntegerListRetrievalDriver.ixx
  MDataStd_IntegerListRetrievalDriver.jxx
  MDataStd_IntegerListStorageDriver.hxx
  MDataStd_IntegerListStorageDriver.ixx
  MDataStd_IntegerListStorageDriver.jxx
  MDataStd_IntegerRetrievalDriver.hxx
  MDataStd_IntegerRetrievalDriver.ixx
  MDataStd_IntegerRetrievalDriver.jxx
  MDataStd_IntegerStorageDriver.hxx
  MDataStd_IntegerStorageDriver.ixx
  MDataStd_IntegerStorageDriver.jxx
  MDataStd_IntPackedMapRetrievalDriver_1.hxx
  MDataStd_IntPackedMapRetrievalDriver_1.ixx
  MDataStd_IntPackedMapRetrievalDriver_1.jxx
  MDataStd_IntPackedMapRetrievalDriver.hxx
  MDataStd_IntPackedMapRetrievalDriver.ixx
  MDataStd_IntPackedMapRetrievalDriver.jxx
  MDataStd_IntPackedMapStorageDriver.hxx
  MDataStd_IntPackedMapStorageDriver.ixx
  MDataStd_IntPackedMapStorageDriver.jxx
  MDataStd.ixx
  MDataStd.jxx
  MDataStd_NamedDataRetrievalDriver.hxx
  MDataStd_NamedDataRetrievalDriver.ixx
  MDataStd_NamedDataRetrievalDriver.jxx
  MDataStd_NamedDataStorageDriver.hxx
  MDataStd_NamedDataStorageDriver.ixx
  MDataStd_NamedDataStorageDriver.jxx
  MDataStd_NameRetrievalDriver.hxx
  MDataStd_NameRetrievalDriver.ixx
  MDataStd_NameRetrievalDriver.jxx
  MDataStd_NameStorageDriver.hxx
  MDataStd_NameStorageDriver.ixx
  MDataStd_NameStorageDriver.jxx
  MDataStd_NoteBookRetrievalDriver.hxx
  MDataStd_NoteBookRetrievalDriver.ixx
  MDataStd_NoteBookRetrievalDriver.jxx
  MDataStd_NoteBookStorageDriver.hxx
  MDataStd_NoteBookStorageDriver.ixx
  MDataStd_NoteBookStorageDriver.jxx
  MDataStd_RealArrayRetrievalDriver_1.hxx
  MDataStd_RealArrayRetrievalDriver_1.ixx
  MDataStd_RealArrayRetrievalDriver_1.jxx
  MDataStd_RealArrayRetrievalDriver.hxx
  MDataStd_RealArrayRetrievalDriver.ixx
  MDataStd_RealArrayRetrievalDriver.jxx
  MDataStd_RealArrayStorageDriver.hxx
  MDataStd_RealArrayStorageDriver.ixx
  MDataStd_RealArrayStorageDriver.jxx
  MDataStd_RealListRetrievalDriver.hxx
  MDataStd_RealListRetrievalDriver.ixx
  MDataStd_RealListRetrievalDriver.jxx
  MDataStd_RealListStorageDriver.hxx
  MDataStd_RealListStorageDriver.ixx
  MDataStd_RealListStorageDriver.jxx
  MDataStd_RealRetrievalDriver.hxx
  MDataStd_RealRetrievalDriver.ixx
  MDataStd_RealRetrievalDriver.jxx
  MDataStd_RealStorageDriver.hxx
  MDataStd_RealStorageDriver.ixx
  MDataStd_RealStorageDriver.jxx
  MDataStd_ReferenceArrayRetrievalDriver.hxx
  MDataStd_ReferenceArrayRetrievalDriver.ixx
  MDataStd_ReferenceArrayRetrievalDriver.jxx
  MDataStd_ReferenceArrayStorageDriver.hxx
  MDataStd_ReferenceArrayStorageDriver.ixx
  MDataStd_ReferenceArrayStorageDriver.jxx
  MDataStd_ReferenceListRetrievalDriver.hxx
  MDataStd_ReferenceListRetrievalDriver.ixx
  MDataStd_ReferenceListRetrievalDriver.jxx
  MDataStd_ReferenceListStorageDriver.hxx
  MDataStd_ReferenceListStorageDriver.ixx
  MDataStd_ReferenceListStorageDriver.jxx
  MDataStd_RelationRetrievalDriver.hxx
  MDataStd_RelationRetrievalDriver.ixx
  MDataStd_RelationRetrievalDriver.jxx
  MDataStd_RelationStorageDriver.hxx
  MDataStd_RelationStorageDriver.ixx
  MDataStd_RelationStorageDriver.jxx
  MDataStd_TickRetrievalDriver.hxx
  MDataStd_TickRetrievalDriver.ixx
  MDataStd_TickRetrievalDriver.jxx
  MDataStd_TickStorageDriver.hxx
  MDataStd_TickStorageDriver.ixx
  MDataStd_TickStorageDriver.jxx
  MDataStd_TreeNodeRetrievalDriver.hxx
  MDataStd_TreeNodeRetrievalDriver.ixx
  MDataStd_TreeNodeRetrievalDriver.jxx
  MDataStd_TreeNodeStorageDriver.hxx
  MDataStd_TreeNodeStorageDriver.ixx
  MDataStd_TreeNodeStorageDriver.jxx
  MDataStd_UAttributeRetrievalDriver.hxx
  MDataStd_UAttributeRetrievalDriver.ixx
  MDataStd_UAttributeRetrievalDriver.jxx
  MDataStd_UAttributeStorageDriver.hxx
  MDataStd_UAttributeStorageDriver.ixx
  MDataStd_UAttributeStorageDriver.jxx
  MDataStd_VariableRetrievalDriver.hxx
  MDataStd_VariableRetrievalDriver.ixx
  MDataStd_VariableRetrievalDriver.jxx
  MDataStd_VariableStorageDriver.hxx
  MDataStd_VariableStorageDriver.ixx
  MDataStd_VariableStorageDriver.jxx
  MDF_ARDriverHSequence.hxx
  MDF_ARDriver.hxx
  MDF_ARDriver.ixx
  MDF_ARDriver.jxx
  MDF_ARDriverSequence.hxx
  MDF_ARDriverTable.hxx
  MDF_ASDriverHSequence.hxx
  MDF_ASDriver.hxx
  MDF_ASDriver.ixx
  MDF_ASDriver.jxx
  MDF_ASDriverSequence.hxx
  MDF_ASDriverTable.hxx
  MDF_DataMapIteratorOfTypeARDriverMap.hxx
  MDF_DataMapIteratorOfTypeASDriverMap.hxx
  MDF_DataMapIteratorOfTypeDriverListMapOfARDriverTable.hxx
  MDF_DataMapIteratorOfTypeDriverListMapOfASDriverTable.hxx
  MDF_DataMapNodeOfTypeARDriverMap.hxx
  MDF_DataMapNodeOfTypeASDriverMap.hxx
  MDF_DataMapNodeOfTypeDriverListMapOfARDriverTable.hxx
  MDF_DataMapNodeOfTypeDriverListMapOfASDriverTable.hxx
  MDF_DriverListOfARDriverTable.hxx
  MDF_DriverListOfASDriverTable.hxx
  MDF_DriverTable.gxx
  MDF.hxx
  MDF.ixx
  MDF.jxx
  MDF_ListIteratorOfDriverListOfARDriverTable.hxx
  MDF_ListIteratorOfDriverListOfASDriverTable.hxx
  MDF_ListNodeOfDriverListOfARDriverTable.hxx
  MDF_ListNodeOfDriverListOfASDriverTable.hxx
  MDF_ReferenceRetrievalDriver.hxx
  MDF_ReferenceRetrievalDriver.ixx
  MDF_ReferenceRetrievalDriver.jxx
  MDF_ReferenceStorageDriver.hxx
  MDF_ReferenceStorageDriver.ixx
  MDF_ReferenceStorageDriver.jxx
  MDF_RelocationTable.gxx
  MDF_RRelocationTable.hxx
  MDF_SequenceNodeOfARDriverSequence.hxx
  MDF_SequenceNodeOfASDriverSequence.hxx
  MDF_SRelocationTable.hxx
  MDF_TagSourceRetrievalDriver.hxx
  MDF_TagSourceRetrievalDriver.ixx
  MDF_TagSourceRetrievalDriver.jxx
  MDF_TagSourceStorageDriver.hxx
  MDF_TagSourceStorageDriver.ixx
  MDF_TagSourceStorageDriver.jxx
  MDF_Tool.hxx
  MDF_Tool.ixx
  MDF_Tool.jxx
  MDF_TypeARDriverMap.hxx
  MDF_TypeASDriverMap.hxx
  MDF_TypeDriverListMapOfARDriverTable.hxx
  MDF_TypeDriverListMapOfASDriverTable.hxx
  MDocStd_DocumentRetrievalDriver.hxx
  MDocStd_DocumentRetrievalDriver.ixx
  MDocStd_DocumentRetrievalDriver.jxx
  MDocStd_DocumentStorageDriver.hxx
  MDocStd_DocumentStorageDriver.ixx
  MDocStd_DocumentStorageDriver.jxx
  MDocStd.hxx
  MDocStd.ixx
  MDocStd.jxx
  MDocStd_XLinkRetrievalDriver.hxx
  MDocStd_XLinkRetrievalDriver.ixx
  MDocStd_XLinkRetrievalDriver.jxx
  MDocStd_XLinkStorageDriver.hxx
  MDocStd_XLinkStorageDriver.ixx
  MDocStd_XLinkStorageDriver.jxx
  MFunction_FunctionRetrievalDriver.hxx
  MFunction_FunctionRetrievalDriver.ixx
  MFunction_FunctionRetrievalDriver.jxx
  MFunction_FunctionStorageDriver.hxx
  MFunction_FunctionStorageDriver.ixx
  MFunction_FunctionStorageDriver.jxx
  MFunction.hxx
  MFunction.ixx
  MFunction.jxx
  PDataStd_AsciiString.hxx
  PDataStd_AsciiString.ixx
  PDataStd_AsciiString.jxx
  PDataStd_BooleanArray.hxx
  PDataStd_BooleanArray.ixx
  PDataStd_BooleanArray.jxx
  PDataStd_BooleanList.hxx
  PDataStd_BooleanList.ixx
  PDataStd_BooleanList.jxx
  PDataStd_ByteArray_1.hxx
  PDataStd_ByteArray_1.ixx
  PDataStd_ByteArray_1.jxx
  PDataStd_ByteArray.hxx
  PDataStd_ByteArray.ixx
  PDataStd_ByteArray.jxx
  PDataStd_Comment.hxx
  PDataStd_Comment.ixx
  PDataStd_Comment.jxx
  PDataStd_Directory.hxx
  PDataStd_Directory.ixx
  PDataStd_Directory.jxx
  PDataStd_Expression.hxx
  PDataStd_Expression.ixx
  PDataStd_Expression.jxx
  PDataStd_ExtStringArray_1.hxx
  PDataStd_ExtStringArray_1.ixx
  PDataStd_ExtStringArray_1.jxx
  PDataStd_ExtStringArray.hxx
  PDataStd_ExtStringArray.ixx
  PDataStd_ExtStringArray.jxx
  PDataStd_ExtStringList.hxx
  PDataStd_ExtStringList.ixx
  PDataStd_ExtStringList.jxx
  PDataStd_FieldOfHArray1OfByte.hxx
  PDataStd_FieldOfHArray1OfHArray1OfInteger.hxx
  PDataStd_FieldOfHArray1OfHArray1OfReal.hxx
  PDataStd_FieldOfHArray1OfHAsciiString.hxx
  PDataStd_HArray1OfByte.hxx
  PDataStd_HArray1OfHArray1OfInteger.hxx
  PDataStd_HArray1OfHArray1OfReal.hxx
  PDataStd_HArray1OfHAsciiString.hxx
  PDataStd_IntegerArray_1.hxx
  PDataStd_IntegerArray_1.ixx
  PDataStd_IntegerArray_1.jxx
  PDataStd_IntegerArray.hxx
  PDataStd_IntegerArray.ixx
  PDataStd_IntegerArray.jxx
  PDataStd_Integer.hxx
  PDataStd_Integer.ixx
  PDataStd_Integer.jxx
  PDataStd_IntegerList.hxx
  PDataStd_IntegerList.ixx
  PDataStd_IntegerList.jxx
  PDataStd_IntPackedMap_1.hxx
  PDataStd_IntPackedMap_1.ixx
  PDataStd_IntPackedMap_1.jxx
  PDataStd_IntPackedMap.hxx
  PDataStd_IntPackedMap.ixx
  PDataStd_IntPackedMap.jxx
  PDataStd_NamedData.hxx
  PDataStd_NamedData.ixx
  PDataStd_NamedData.jxx
  PDataStd_Name.hxx
  PDataStd_Name.ixx
  PDataStd_Name.jxx
  PDataStd_NoteBook.hxx
  PDataStd_NoteBook.ixx
  PDataStd_NoteBook.jxx
  PDataStd_RealArray_1.hxx
  PDataStd_RealArray_1.ixx
  PDataStd_RealArray_1.jxx
  PDataStd_RealArray.hxx
  PDataStd_RealArray.ixx
  PDataStd_RealArray.jxx
  PDataStd_Real.hxx
  PDataStd_Real.ixx
  PDataStd_Real.jxx
  PDataStd_RealList.hxx
  PDataStd_RealList.ixx
  PDataStd_RealList.jxx
  PDataStd_ReferenceArray.hxx
  PDataStd_ReferenceArray.ixx
  PDataStd_ReferenceArray.jxx
  PDataStd_ReferenceList.hxx
  PDataStd_ReferenceList.ixx
  PDataStd_ReferenceList.jxx
  PDataStd_Relation.hxx
  PDataStd_Relation.ixx
  PDataStd_Relation.jxx
  PDataStd_Tick.hxx
  PDataStd_Tick.ixx
  PDataStd_Tick.jxx
  PDataStd_TreeNode.hxx
  PDataStd_TreeNode.ixx
  PDataStd_TreeNode.jxx
  PDataStd_UAttribute.hxx
  PDataStd_UAttribute.ixx
  PDataStd_UAttribute.jxx
  PDataStd_Variable.hxx
  PDataStd_Variable.ixx
  PDataStd_Variable.jxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfByte.hxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfHArray1OfInteger.hxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfHArray1OfReal.hxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfHAsciiString.hxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfByte.hxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfHArray1OfInteger.hxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfHArray1OfReal.hxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfHAsciiString.hxx
  PDF_Attribute.hxx
  PDF_Attribute.ixx
  PDF_Attribute.jxx
  PDF_Data.hxx
  PDF_Data.ixx
  PDF_Data.jxx
  PDF_Data.lxx
  PDF_FieldOfHAttributeArray1.hxx
  PDF_HAttributeArray1.hxx
  PDF_Reference.hxx
  PDF_Reference.ixx
  PDF_Reference.jxx
  PDF_TagSource.hxx
  PDF_TagSource.ixx
  PDF_TagSource.jxx
  PDF_VArrayNodeOfFieldOfHAttributeArray1.hxx
  PDF_VArrayTNodeOfFieldOfHAttributeArray1.hxx
  PDocStd_Document.hxx
  PDocStd_Document.ixx
  PDocStd_Document.jxx
  PDocStd_XLink.hxx
  PDocStd_XLink.ixx
  PDocStd_XLink.jxx
  PFunction_Function.hxx
  PFunction_Function.ixx
  PFunction_Function.jxx
  )

# --- sources ---

SET(GEOM_SOURCES
  MDataStd_AsciiStringRetrievalDriver.cxx
  MDataStd_AsciiStringStorageDriver.cxx
  MDataStd_BooleanArrayRetrievalDriver.cxx
  MDataStd_BooleanArrayStorageDriver.cxx
  MDataStd_BooleanListRetrievalDriver.cxx
  MDataStd_BooleanListStorageDriver.cxx
  MDataStd_ByteArrayRetrievalDriver_1.cxx
  MDataStd_ByteArrayRetrievalDriver.cxx
  MDataStd_ByteArrayStorageDriver.cxx
  MDataStd_CommentRetrievalDriver.cxx
  MDataStd_CommentStorageDriver.cxx
  MDataStd.cxx
  MDataStd_DirectoryRetrievalDriver.cxx
  MDataStd_DirectoryStorageDriver.cxx
  MDataStd_ExpressionRetrievalDriver.cxx
  MDataStd_ExpressionStorageDriver.cxx
  MDataStd_ExtStringArrayRetrievalDriver_1.cxx
  MDataStd_ExtStringArrayRetrievalDriver.cxx
  MDataStd_ExtStringArrayStorageDriver.cxx
  MDataStd_ExtStringListRetrievalDriver.cxx
  MDataStd_ExtStringListStorageDriver.cxx
  MDataStd_IntegerArrayRetrievalDriver_1.cxx
  MDataStd_IntegerArrayRetrievalDriver.cxx
  MDataStd_IntegerArrayStorageDriver.cxx
  MDataStd_IntegerListRetrievalDriver.cxx
  MDataStd_IntegerListStorageDriver.cxx
  MDataStd_IntegerRetrievalDriver.cxx
  MDataStd_IntegerStorageDriver.cxx
  MDataStd_IntPackedMapRetrievalDriver_1.cxx
  MDataStd_IntPackedMapRetrievalDriver.cxx
  MDataStd_IntPackedMapStorageDriver.cxx
  MDataStd_NamedDataRetrievalDriver.cxx
  MDataStd_NamedDataStorageDriver.cxx
  MDataStd_NameRetrievalDriver.cxx
  MDataStd_NameStorageDriver.cxx
  MDataStd_NoteBookRetrievalDriver.cxx
  MDataStd_NoteBookStorageDriver.cxx
  MDataStd_RealArrayRetrievalDriver_1.cxx
  MDataStd_RealArrayRetrievalDriver.cxx
  MDataStd_RealArrayStorageDriver.cxx
  MDataStd_RealListRetrievalDriver.cxx
  MDataStd_RealListStorageDriver.cxx
  MDataStd_RealRetrievalDriver.cxx
  MDataStd_RealStorageDriver.cxx
  MDataStd_ReferenceArrayRetrievalDriver.cxx
  MDataStd_ReferenceArrayStorageDriver.cxx
  MDataStd_ReferenceListRetrievalDriver.cxx
  MDataStd_ReferenceListStorageDriver.cxx
  MDataStd_RelationRetrievalDriver.cxx
  MDataStd_RelationStorageDriver.cxx
  MDataStd_TickRetrievalDriver.cxx
  MDataStd_TickStorageDriver.cxx
  MDataStd_TreeNodeRetrievalDriver.cxx
  MDataStd_TreeNodeStorageDriver.cxx
  MDataStd_UAttributeRetrievalDriver.cxx
  MDataStd_UAttributeStorageDriver.cxx
  MDataStd_VariableRetrievalDriver.cxx
  MDataStd_VariableStorageDriver.cxx
  MDF_ARDriver.cxx
  MDF_ARDriverHSequence_0.cxx
  MDF_ARDriverSequence_0.cxx
  MDF_ARDriverTable_0.cxx
  MDF_ASDriver.cxx
  MDF_ASDriverHSequence_0.cxx
  MDF_ASDriverSequence_0.cxx
  MDF_ASDriverTable_0.cxx
  MDF.cxx
  MDF_DataMapIteratorOfTypeARDriverMap_0.cxx
  MDF_DataMapIteratorOfTypeASDriverMap_0.cxx
  MDF_DataMapIteratorOfTypeDriverListMapOfARDriverTable_0.cxx
  MDF_DataMapIteratorOfTypeDriverListMapOfASDriverTable_0.cxx
  MDF_DataMapNodeOfTypeARDriverMap_0.cxx
  MDF_DataMapNodeOfTypeASDriverMap_0.cxx
  MDF_DataMapNodeOfTypeDriverListMapOfARDriverTable_0.cxx
  MDF_DataMapNodeOfTypeDriverListMapOfASDriverTable_0.cxx
  MDF_DriverListOfARDriverTable_0.cxx
  MDF_DriverListOfASDriverTable_0.cxx
  MDF_DriverTable.gxx
  MDF_ListIteratorOfDriverListOfARDriverTable_0.cxx
  MDF_ListIteratorOfDriverListOfASDriverTable_0.cxx
  MDF_ListNodeOfDriverListOfARDriverTable_0.cxx
  MDF_ListNodeOfDriverListOfASDriverTable_0.cxx
  MDF_ReferenceRetrievalDriver.cxx
  MDF_ReferenceStorageDriver.cxx
  MDF_RelocationTable.gxx
  MDF_RRelocationTable_0.cxx
  MDF_SequenceNodeOfARDriverSequence_0.cxx
  MDF_SequenceNodeOfASDriverSequence_0.cxx
  MDF_SRelocationTable_0.cxx
  MDF_TagSourceRetrievalDriver.cxx
  MDF_TagSourceStorageDriver.cxx
  MDF_Tool.cxx
  MDF_TypeARDriverMap_0.cxx
  MDF_TypeASDriverMap_0.cxx
  MDF_TypeDriverListMapOfARDriverTable_0.cxx
  MDF_TypeDriverListMapOfASDriverTable_0.cxx
  MDocStd.cxx
  MDocStd_DocumentRetrievalDriver.cxx
  MDocStd_DocumentStorageDriver.cxx
  MDocStd_XLinkRetrievalDriver.cxx
  MDocStd_XLinkStorageDriver.cxx
  MFunction.cxx
  MFunction_FunctionRetrievalDriver.cxx
  MFunction_FunctionStorageDriver.cxx
  PDataStd_AsciiString.cxx
  PDataStd_BooleanArray.cxx
  PDataStd_BooleanList.cxx
  PDataStd_ByteArray_1.cxx
  PDataStd_ByteArray.cxx
  PDataStd_Comment.cxx
  PDataStd_Directory.cxx
  PDataStd_Expression.cxx
  PDataStd_ExtStringArray_1.cxx
  PDataStd_ExtStringArray.cxx
  PDataStd_ExtStringList.cxx
  PDataStd_FieldOfHArray1OfByte_0.cxx
  PDataStd_FieldOfHArray1OfHArray1OfInteger_0.cxx
  PDataStd_FieldOfHArray1OfHArray1OfReal_0.cxx
  PDataStd_FieldOfHArray1OfHAsciiString_0.cxx
  PDataStd_HArray1OfByte_0.cxx
  PDataStd_HArray1OfHArray1OfInteger_0.cxx
  PDataStd_HArray1OfHArray1OfReal_0.cxx
  PDataStd_HArray1OfHAsciiString_0.cxx
  PDataStd_IntegerArray_1.cxx
  PDataStd_IntegerArray.cxx
  PDataStd_Integer.cxx
  PDataStd_IntegerList.cxx
  PDataStd_IntPackedMap_1.cxx
  PDataStd_IntPackedMap.cxx
  PDataStd_Name.cxx
  PDataStd_NamedData.cxx
  PDataStd_NoteBook.cxx
  PDataStd_RealArray_1.cxx
  PDataStd_RealArray.cxx
  PDataStd_Real.cxx
  PDataStd_RealList.cxx
  PDataStd_ReferenceArray.cxx
  PDataStd_ReferenceList.cxx
  PDataStd_Relation.cxx
  PDataStd_Tick.cxx
  PDataStd_TreeNode.cxx
  PDataStd_UAttribute.cxx
  PDataStd_Variable.cxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfByte_0.cxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfHArray1OfInteger_0.cxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfHArray1OfReal_0.cxx
  PDataStd_VArrayNodeOfFieldOfHArray1OfHAsciiString_0.cxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfByte_0.cxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfHArray1OfInteger_0.cxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfHArray1OfReal_0.cxx
  PDataStd_VArrayTNodeOfFieldOfHArray1OfHAsciiString_0.cxx
  PDF_Attribute.cxx
  PDF_Data.cxx
  PDF_FieldOfHAttributeArray1_0.cxx
  PDF_HAttributeArray1_0.cxx
  PDF_Reference.cxx
  PDF_TagSource.cxx
  PDF_VArrayNodeOfFieldOfHAttributeArray1_0.cxx
  PDF_VArrayTNodeOfFieldOfHAttributeArray1_0.cxx
  PDocStd_Document.cxx
  PDocStd_XLink.cxx
  PFunction_Function.cxx
  )

# --- rules ---

ADD_LIBRARY(TKPLCAF ${GEOM_SOURCES})
TARGET_LINK_LIBRARIES(TKPLCAF ${_link_LIBRARIES})
INSTALL(TARGETS TKPLCAF EXPORT ${PROJECT_NAME}TargetGroup DESTINATION ${SALOME_INSTALL_LIBS})

INSTALL(FILES ${GEOM_HEADERS} DESTINATION ${SALOME_INSTALL_HEADERS})
